--- a/franske-course-information/modules/itc-2300/pages/schedule.adoc
+++ b/franske-course-information/modules/itc-2300/pages/schedule.adoc
@@ -15,8 +15,8 @@
 | 19-Oct  | 9        | Read: GUI Asterisk Configuration Materials (see below)                                                                                                                                                               | T1 and PSTN Access Labs (see Assignments page)                                       | VoIP: Provisioning, Voicemail, and SIP Lab Report, VoIP: Provisioning, Voicemail, and SIP Discussion All Posts, T1 and PSTN Access Discussion First Posts, VoIP: Provisioning, Voicemail, and SIP Lab Exam                                                 |                                         
 | 26-Oct  | 10       | Getting Started with DevNet Readings (see below for links)                                                                                                                                                           | GUI Asterisk Configuration Labs (see Assignments page)                               | T1 and PSTN Access Lab Report, T1 and PSTN Access Discussion All Posts, GUI Asterisk Configuration Discussion First Posts, T1 and PSTN Access Exam                                                                                                         |                                         
 | 2-Nov   | 11       | REST APIs and Introducing Network Programmability Readings (see below for links)                                                                                                                                     | Getting Started with DevNet Lab (see Assignments page)                               | GUI Asterisk Configuration Lab Report, GUI Asterisk Configuration Discussion All Posts, Getting Started with DevNet Discussion First Posts, GUI Asterisk Configuration Exam                                                                                |                                         
-| 9-Nov   | 12       | Model Driven Network Programmability and IOS XE Readings (see below for links)                                                                                                                                       | REST API Fundamentals & Network Programmability Lab (see Assignments page)           | Getting Started with DevNet Lab Report, Getting Started with DevNet Discussion All Posts, REST API Fundamentals & Network Programmability Discussion First Posts, Getting Started with DevNet Exam                                                         |                                         
-| 16-Nov  | 13       | Getting Started with Ansible for Network Programmability Readings (see below for links)                                                                                                                              | Model Driven Network Programmability and IOS XE Lab (see Assignments page)           | REST APIs and Introducing Network Programmability Lab Report, REST APIs and Introducing Network Programmability All Posts, Model Driven Network Programmability and IOS XE Discussion First Posts, REST APIs and Introducing Network Programmability Exam  |                                         
+| 9-Nov   | 12       | Model Driven Network Programmability and IOS XR Readings (see below for links)                                                                                                                                       | REST API Fundamentals & Network Programmability Lab (see Assignments page)           | Getting Started with DevNet Lab Report, Getting Started with DevNet Discussion All Posts, REST API Fundamentals & Network Programmability Discussion First Posts, Getting Started with DevNet Exam                                                         |                                         
+| 16-Nov  | 13       | Getting Started with Ansible for Network Programmability Readings (see below for links)                                                                                                                              | Model Driven Network Programmability and IOS XR Lab (see Assignments page)           | REST APIs and Introducing Network Programmability Lab Report, REST APIs and Introducing Network Programmability All Posts, Model Driven Network Programmability and IOS XR Discussion First Posts, REST APIs and Introducing Network Programmability Exam  |                                         
 | 23-Nov  | 14       | Readings as required for your case study projects                                                                                                                                                                    | Getting Started with Ansible for Network Programmability Lab (see Assignments page)  | Model Driven Network Programmability and IOS XE Lab Report,Model Driven Network Programmability and IOS XE Readings All Posts, Getting Started with Ansible for Network Programmability First Posts, Model Driven Network Programmability and IOS XE Exam  |                                         
 | 30-Nov  | 15       | Readings as required for your case study projects                                                                                                                                                                    | Start work on your case study project                                                | Getting Started with Ansible for Network Programmability Lab Report, Getting Started with Ansible for Network Programmability All Posts, Getting Started with Ansible for Network Programmability Exam                                                     |                                         
 | 7-Dec   | 16       | Readings as required for your case study projects                                                                                                                                                                    | Finish work on your case study project and practice presentation                     |                                                                                                                                                                                                                                                            |                                         
@@ -81,5 +81,9 @@ NOTE: This is an older reference and the SIP configuration shown uses sip.conf w
 * https://github.com/PhantomVl/sccp_manager/blob/extension_mobility/README.md[Chan-SCCP FreePBX Manager Readme]
 * https://wiki.freepbx.org/display/PPS/FreePBX+Distro+First+Steps+After+Installation[FreePBX First Steps]
 * https://github.com/chan-sccp/chan-sccp/wiki/FreePBX_Setup[Chan-SCCP FreePBX Setup]
+
+=== Network Programmability Readings
+Readings for the network programmability unit are embedded within the lab activities. See the xref:assignments.adoc#_network_programmability_labs[Network Prgammability Lab Activities].
+
 
 include::program-info:ROOT:partial$stdfooter.adoc[]
