change pages to word count 2300 project

--- a/franske-course-information/modules/itc-2300/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2300/pages/assignments.adoc
@@ -113,7 +113,7 @@ The project should be related to one of the three main units covered in the cour
 
 === Lab Report Tips
 
-* The format is the same as a regular lab report (what you did, problems you had, how you tested, and what you learned) but the report must be much longer (about 4 pages single spaced) because it includes 3 weeks of work. It should be clear how you spent the three weeks and that it really was the equivalent amount of work as three weeks of regular classwork.
+* The format is the same as a regular lab report (what you did, problems you had, how you tested, and what you learned) but the report must be much longer (about 1600 words which is about 4 pages single spaced) because it includes 2-3 weeks of work. It should be clear how you spent the three weeks and that it really was the equivalent amount of work as three weeks of regular classwork.
 * You should thoroughly describe what you did (not exact steps, but an overview of the major things you accomplished), and what new things you learned by doing the project.
 * It should be clear how the project relates to one of the topics from class.
 * This should also be written like a paper explaining your project so don't include a bunch of lists, etc. which are just there to fill space as that will not produce a quality report.
@@ -122,7 +122,7 @@ The project should be related to one of the three main units covered in the cour
 
 There will be two primary components to your grade for the project, a lab report and a presentation.
 
-You will be turning in a lab report using the same format you have used for other lab reports in the class but it will be longer as this is a much more substantial project. Lab reports for this project should be about 4 pages long (single spaced) and include all the regular sections of a lab report (what you did, what problems you had, how you tested, and what you learned. The project lab report will be worth 100 points.
+You will be turning in a lab report using the same format you have used for other lab reports in the class but it will be longer as this is a much more substantial project. Lab reports for this project should be about 1600 words (this is about 4 pages single spaced) and include all the regular sections of a lab report (what you did, what problems you had, how you tested, and what you learned. The project lab report will be worth 100 points.
 
 In addition you will receive a grade on a 10 minute presentation to the class. The presentation should be interesting, engaging, informative, and factually correct. It is a good idea to show off your actual work as much as possible (not just talk about it) so you are strongly encouraged to find a way to demonstrate something "live" during the presentation.
 
