fix pt practice

--- a/franske-course-information/modules/itc-2516/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2516/pages/assignments.adoc
@@ -91,6 +91,7 @@ Any participation activities completed in the course will go here. This falls in
 * Complete the system test exam (5 points for completing)
 * Complete the online course feedback form (5 points for completing)
 * Complete the online practice final exam (10 points for attempting)
+* Complete the online Packet Tracer Practice Skills Assessment (10 points for attempting)
 * Meet with the instructor once per week to discuss course progress and ask questions (up to 10 points each based on progress)
 
 === Unit Assessments
@@ -238,6 +239,7 @@ TIP: Discussion forum posts are usually worth a larger portion of your final gra
 === Participation Activities
 * Complete the online course feedback form (5 points for completing)
 * Complete the online practice final exam (10 points for attempting)
+* Complete the online Packet Tracer Practice Skills Assessment - all parts (10 points for attempting)
 * Meet with the instructor once per week to discuss course progress and ask questions (up to 10 points each based on progress)
 
 === Unit Assessments
