add itc2621 course

--- a/franske-course-information/modules/ROOT/partials/campus-policies.adoc
+++ b/franske-course-information/modules/ROOT/partials/campus-policies.adoc
@@ -7,6 +7,8 @@ You will need daily access to a high-speed internet connection (DSL, cable modem
 === Academic Integrity (Plagiarism and Cheating)
 Academic integrity is one of the most important values in higher education. This principle requires that each student's work represents his or her own personal efforts and that the student acknowledges the intellectual contributions of others. The foundation for this principle is student academic honesty. IHCC students are expected to honor the requirements of the College Academic Integrity Policy. The following are some examples of unacceptable academic practices that will be viewed as policy violations.
 
+For the purposes of this policy artificial intelligence (AI) systems such as ChatGPT or automatic summarization systems are "another person". As such they are prohibted unless authorized in advance by your instructor.
+
 It is unacceptable to submit the work of another person as your own. If you quote, summarize, paraphrase, or use the ideas of another, you must accurately attribute that information. If you do not acknowledge the source, you are plagiarizing. Academic dishonesty also includes unauthorized collaboration on academic work; taking, acquiring, or using test materials without faculty permission; submitting the same assignment for multiple classes without instructor permission; taking an examination for another person and many other situations. If you are unsure whether you are plagiarizing or how to cite a source please ask an instructor or staff member for help prior to turning in the assignment.
 
 In this course, the first offense of plagiarism and/or cheating will result in a score of zero on the assignment, quiz or test and reporting of the incident to college administration. Further plagiarism and/or cheating may result in immediate failure of the course and additional consequences determined by college administration.
