--- a/franske-course-information/modules/ROOT/navtop.adoc
+++ b/franske-course-information/modules/ROOT/navtop.adoc
@@ -6,6 +6,7 @@ include::itc-2300:partial$nav.adoc[]
 include::itc-2480:partial$nav.adoc[]
 include::itc-2516:partial$nav.adoc[]
 include::itc-2611:partial$nav.adoc[]
+include::itc-2621:partial$nav.adoc[]
 --
 * xref:tech-info:ROOT:index.adoc[Technical Information]
 * xref:software-info:ROOT:index.adoc[Software Discounts and Resources]
