fix office hours

--- a/franske-course-information/modules/ROOT/partials/instructor-contact.adoc
+++ b/franske-course-information/modules/ROOT/partials/instructor-contact.adoc
@@ -9,8 +9,8 @@
 
 *Office and Hours:*
 
-* Online office hours (email during these times and we can setup a Zoom or phone call right away): Tu 2:00-4:00pm
-* On campus office hours and lab assistance time (subject to change to online based on COVID-19 recommendations) look for me in the Business Building room B120 or B109, B143, or B144: M 5:00-6:00pm, W 5:00-6:00pm
+* Online office hours: Tu 6:00-7:00pm
+* On campus office hours not available for Spring 2023
 * Webcam/phone/in-person meetings also available other times by appointment.
 
 *Phone:*
